--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>About | Mike Derjabin</title>
+    <title>Contact | Mike Derjabin - Contact</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,7 +36,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"
               >About <span class="sr-only">(current)</span></a
             >
@@ -44,63 +44,40 @@
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-
     <section class="my-4">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-12">
-            <div>
-              <h1 class="mt-0">About Me</h1>
-              <hr />
-              <img
-                src="Mike.JPG"
-                class="mr-3 profile-image float-left"
-                alt="A picture of Mike"
+        <div style="max-width: 400px">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Name</label>
+              <input
+                type="name"
+                class="form-control"
+                id="exampleInputPassword1"
               />
-              <div class="media-body">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
-                </p>
-                <br />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
-                </p>
-              </div>
             </div>
-          </div>
-          <div class="col-md-6 sol-sm-0"></div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
+    </section>
+    <section>
+      <div class="container"></div>
     </section>
 
     <footer class="footer mt-auto py-3">
