--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>About | Mike Derjabin</title>
+    <title>Portfolio | Mike Derjabin</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,12 +36,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"
               >About <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
@@ -53,52 +53,43 @@
 
     <section class="my-4">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-12">
-            <div>
-              <h1 class="mt-0">About Me</h1>
-              <hr />
-              <img
-                src="Mike.JPG"
-                class="mr-3 profile-image float-left"
-                alt="A picture of Mike"
-              />
-              <div class="media-body">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
-                </p>
-                <br />
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
-                </p>
-              </div>
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project #1</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                earum vel, nesciunt pariatur est eos facilis quasi officia,
+                explicabo eaque amet, exercitationem quaerat nemo dicta velit
+                illo et ipsam eius?
+              </p>
+              <p class="card-text"></p>
             </div>
           </div>
-          <div class="col-md-6 sol-sm-0"></div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project #2</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veritatis, fugit magnam nemo amet consectetur illum accusamus
+                assumenda tempore, quis autem, dolorem perferendis alias minima
+                dolore harum at neque voluptate fugiat!
+              </p>
+              <p class="card-text"></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project #3</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Possimus, modi eaque odio aliquam quam debitis mollitia rem
+                nostrum culpa, ullam iusto voluptatem libero adipisci itaque non
+                in repellat vero architecto.
+              </p>
+              <p class="card-text"></p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
