--- a/index.html
+++ b/index.html
@@ -65,35 +65,12 @@
               />
               <div class="media-body">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
+                  Hello!
+                  My name is Mike Derjabin and I am a freelancer, photgrpaher and web-designer. 
                 </p>
                 <br />
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Possimus architecto modi aliquam? Ad numquam dolorum eum
-                  deleniti, provident eius quae ab dolores voluptatum
-                  exercitationem velit sed totam perferendis aliquam corrupti!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  perferendis saepe pariatur corrupti doloremque quos numquam
-                  laudantium dignissimos? Cum animi facere tempora repudiandae
-                  asperiores facilis aliquam qui fugiat! Dignissimos,
-                  tempora.Incidunt blanditiis ducimus placeat harum facere.
-                  Iusto reiciendis facere perferendis aliquid numquam ducimus
-                  unde et eaque magni perspiciatis possimus ex dolore suscipit
-                  voluptate mollitia, provident, optio aut corrupti, dignissimos
-                  labore!
+                  <a href="https://github.com/mikederjabin">Here is my GitHub account.</a>
                 </p>
               </div>
             </div>
