--- a/portfolio.html
+++ b/portfolio.html
@@ -51,47 +51,34 @@
       </div>
     </nav>
 
-    <section class="my-4">
-      <div class="container">
-        <div class="card-deck">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Project #1</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-                earum vel, nesciunt pariatur est eos facilis quasi officia,
-                explicabo eaque amet, exercitationem quaerat nemo dicta velit
-                illo et ipsam eius?
-              </p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Project #2</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Veritatis, fugit magnam nemo amet consectetur illum accusamus
-                assumenda tempore, quis autem, dolorem perferendis alias minima
-                dolore harum at neque voluptate fugiat!
-              </p>
-              <p class="card-text"></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Project #3</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Possimus, modi eaque odio aliquam quam debitis mollitia rem
-                nostrum culpa, ullam iusto voluptatem libero adipisci itaque non
-                in repellat vero architecto.
-              </p>
-              <p class="card-text"></p>
-            </div>
-          </div>
+
+    <div class="card-group">
+      <div class="card">
+        <a href="https://mikederjabin.github.io/the-flavor-app/"><img src="pasta_logo-2.jpg" class="card-img-top" alt="flavor_app"></a>
+        <div class="card-body">
+          <h5 class="card-title">Flavor</h5>
+          <p class="card-text">Your digital recipe book.</p>
+          <a href="https://github.com/mikederjabin/the-flavor-app"><p class="card-text"><small class="text-muted">GitHub</small></p></a> 
         </div>
       </div>
+      <div class="card">
+        <a href="https://mikederjabin.github.io/HW5/"><img src="planner.jpg" class="card-img-top" alt="workday_scheduler"></a>
+        <div class="card-body">
+          <h5 class="card-title">Work Day Scheduler</h5>
+          <p class="card-text">Schedule your work day.</p>
+          <a href="https://github.com/mikederjabin/HW5"><p class="card-text"><small class="text-muted">GitHub</small></p></a> 
+        </div>
+      </div>
+      <div class="card">
+        <a href="https://mikederjabin.github.io/HW4/"><img src="quiz.jpg" class="card-img-top" alt="workday_scheduler"></a>
+        <div class="card-body">
+          <h5 class="card-title">Code Quiz</h5>
+          <p class="card-text">Test your coding knowledge.</p>
+          <a href="https://github.com/mikederjabin/HW4"><p class="card-text"><small class="text-muted">GitHub</small></p></a>
+        </div>
+      </div>
+    </div>
+
     </section>
 
     <footer class="footer mt-auto py-3">
