--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="media-body">
                 <p>
                   Hello!
-                  My name is Mike Derjabin and I am a freelancer, photgrpaher and web-designer. 
+                  My name is Mike Derjabin and I am a freelancer, photographer and web-designer. 
                 </p>
                 <br />
                 <p>
